<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_task_activity"
    android:background="@color/mint">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp">
        
        <TextView
            android:layout_width="196dp"
            android:layout_height="28dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/add_task"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold">

        </TextView>
        
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/red_button"
            android:onClick="next_activity4">
        </ImageView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="392dp"
        android:layout_height="192dp"
        android:layout_marginTop="116dp"
        android:layout_marginLeft="-392dp">

        <EditText
            android:layout_width="312dp"
            android:layout_height="32dp"
            android:layout_marginStart="40dp"
            android:background="@drawable/edit_text_design"
            android:text="@string/head_task"
            android:paddingLeft="10dp"
            android:textColor="@color/gray">

        </EditText>

        <TextView
            android:layout_width="148dp"
            android:layout_height="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="-312dp"
            android:background="@drawable/edit_text_design"
            android:textColor="@color/gray"
            android:drawableLeft="@drawable/icon_alarm"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:drawablePadding="10dp">
        </TextView>

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="22dp"
            android:layout_marginLeft="-110dp"
            android:layout_marginTop="45dp">

            <ScrollView
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:layout_marginTop="7dp"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scroll"
                    android:textColor="@color/gray">

                </TextView>
            </ScrollView>

        </LinearLayout>

        <TextView
            android:layout_width="148dp"
            android:layout_height="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="35dp"
            android:text="@string/date"
            android:background="@drawable/edit_text_design"
            android:textColor="@color/gray"
            android:drawableLeft="@drawable/icon_calendar"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:drawablePadding="10dp">
        </TextView>
        
        <TextView
            android:layout_width="312dp"
            android:layout_height="96dp"
            android:layout_marginTop="85dp"
            android:layout_marginLeft="-313dp"
            android:background="@drawable/edit_text_design"
            android:text="@string/comment_task"
            android:textColor="@color/gray"
            android:textSize="18dp"
            android:paddingLeft="5dp">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="393dp"
        android:layout_height="52dp"
        android:layout_marginLeft="-390dp"
        android:layout_marginTop="577dp">
        
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="312dp"
            android:layout_height="48dp"
            android:background="@drawable/button_alarm"
            android:layout_marginStart="39dp"
            android:text="Записать задачу"
            android:textColor="@color/white"
            android:onClick="next_activity5">
        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>



</GridLayout>